fix docker test issue

--- a/.github/workflows/deploy-docker-ui.yml
+++ b/.github/workflows/deploy-docker-ui.yml
@@ -72,6 +72,7 @@ jobs:
           export CFLAGS="-I /workdir/openssl/include"
           export LDFLAGS="-L /workdir/openssl"
           ./package/build-pkg.sh --platform linux --arch all --filearch $GOARCH-linux --outputdir /workdir/build
+          strip src/smartdns
           EOF
           if  test "$GOARCH" = "armv7" ;then
             docker run -i --rm -v ${{ github.workspace }}:/workdir muslcc/x86_64:armv7l-linux-musleabihf sh /workdir/docker-openssl.sh
@@ -103,7 +104,7 @@ jobs:
             docker run -i --rm -v ${{ github.workspace }}:/workdir messense/rust-musl-cross:$GOARCH-musl sh /workdir/docker-build.sh
           fi
           cd ${{ github.workspace }}
-          cat >> Dockerfile.unknown << EOF
+          cat >> Dockerfile.unknown << 'EOF'
           FROM alpine:3.21
           ENV TZ="Asia/Shanghai"
           COPY ./src/smartdns /usr/sbin
@@ -111,7 +112,7 @@ jobs:
           COPY ./plugin/smartdns-ui/libgcc_s.so.1 /usr/lib
           EXPOSE 53/udp 53/tcp 6080/tcp
           VOLUME "/etc/smartdns/"
-          HEALTHCHECK --interval=5m CMD test `nslookup dns.pub 127.0.0.1 |grep answer |wc -l` -gt 0
+          HEALTHCHECK --interval=5m CMD test $(nslookup dns.pub 127.0.0.1 |grep answer |wc -l) -gt 0
           CMD ["/usr/sbin/smartdns", "-f", "-x", "-p -"]
           EOF
           docker login --username=${{ secrets.DOCKER_USERNAME }} --password='${{ secrets.DOCKER_PASSWORD }}'
