fix version issue

--- a/.github/workflows/deploy-docker-ui.yml
+++ b/.github/workflows/deploy-docker-ui.yml
@@ -26,6 +26,7 @@ jobs:
           echo "CUR_VERSION=$pre_version$cur_version" >> $GITHUB_OUTPUT
 
   build: 
+    needs: get-version
     strategy:
       matrix:
         goarch: [x86_64, aarch64]
