--- a/.github/workflows/test-new.yml
+++ b/.github/workflows/test-new.yml
@@ -53,22 +53,22 @@ jobs:
           sed -i "s/VER=.*/VER=${{needs.get-version.outputs.CUR_VERSION}}/" ${{ github.workspace }}/package/build-pkg.sh
           
           mkdir -p openssl
-          curl -sSL https://github.com/openssl/openssl/archive/refs/tags/OpenSSL_1_1_1u.tar.gz -o openssl.tar.gz
+          curl -sSL https://github.com/openssl/openssl/releases/download/openssl-3.4.1/openssl-3.4.1.tar.gz -o openssl.tar.gz
           tar -zxvf openssl.tar.gz --strip-components 1 -C openssl
 
           cat >> docker-build.sh << EOF
           apk add perl make coreutils tar pkgconfig dpkg binutils
           cd /workdir/openssl
           if [ "$GOARCH" == "mipsel" ] || [ "$GOARCH" == "mips" ] ;then
-            ./Configure no-tests linux-mips32
+            ./Configure no-tests linux-mips32 enable-quic enable-ktls no-docs
           elif [ "$GOARCH" == "i686" ] ;then
-            ./Configure no-tests linux-x86
+            ./Configure no-tests linux-x86 enable-quic enable-ktls no-docs
           elif [ "$GOARCH" == "powerpc64le" ] ;then
-            ./Configure no-tests linux-ppc64le
+            ./Configure no-tests linux-ppc64le enable-quic enable-ktls no-docs
           elif [ "$GOARCH" == "armv7l" ] ;then
-            ./Configure no-tests linux-armv4
+            ./Configure no-tests linux-armv4 enable-quic enable-ktls no-docs
           else
-           ./Configure no-tests linux-$GOARCH
+           ./Configure no-tests linux-$GOARCH enable-quic enable-ktls no-docs
           fi
           make all
           cd /workdir
@@ -79,30 +79,81 @@ jobs:
           ./package/build-pkg.sh --platform openwrt --arch all --filearch $GOARCH-openwrt --static --outputdir /workdir/build
           ./package/build-pkg.sh --platform optware --arch all --filearch $GOARCH-optware --static --outputdir /workdir/build
           cp ./src/smartdns /workdir/build/smartdns-$GOARCH -a
-          patch -p0 src/Makefile Makefile.patch
+          export CFLAGS="-I /workdir/openssl/include -DFEATURE_CHECK_EDNS"
           ./package/build-pkg.sh --platform debian --arch all --filearch $GOARCH-debian-edns --static --outputdir /workdir/build
           ./package/build-pkg.sh --platform linux --arch all --filearch $GOARCH-linux-edns --static --outputdir /workdir/build
           ./package/build-pkg.sh --platform openwrt --arch all --filearch $GOARCH-openwrt-edns --static --outputdir /workdir/build
           ./package/build-pkg.sh --platform optware --arch all --filearch $GOARCH-optware-edns --static --outputdir /workdir/build
           cp ./src/smartdns /workdir/build/smartdns-$GOARCH-edns -a
           EOF
-
-          cat >> Makefile.patch << EOF
-          --- Makefile
-          +++ Makefile
-          @@ -27,6 +27,7 @@
-           ifdef VER
-           override CFLAGS += -DSMARTDNS_VERION='"\$(VER)"'
-           endif
-          +override CFLAGS += -DFEATURE_CHECK_EDNS
-          
-           CXXFLAGS=-O2 -g -Wall -std=c++11
-           override CXXFLAGS +=-Iinclude
-          EOF
-
           if [ "$GOARCH" == "armv7l" ] ;then
             docker run -i --rm -v ${{ github.workspace }}:/workdir muslcc/x86_64:armv7l-linux-musleabihf sh /workdir/docker-build.sh
           else
+            docker run -i --rm -v ${{ github.workspace }}:/workdir muslcc/x86_64:$GOARCH-linux-musl sh /workdir/docker-build.sh
+          fi
+
+      - name: Build-with-ui
+        continue-on-error: true
+        # if: matrix.goarch == 'x86_64' || matrix.goarch == 'aarch64'
+        run: |
+          cat >> cargo-build.sh << EOF
+          cd /workdir/plugin/smartdns-ui
+          sed -i 's/crate-type = \["cdylib", "lib"\]/crate-type = \["staticlib"\]/' Cargo.toml
+          export OPENSSL_DIR=/workdir/openssl
+          export OPENSSL_LIB_DIR="/workdir/openssl"
+          export OPENSSL_INCLUDE_DIR="/workdir/openssl/include"
+          export AR="ar"
+          export RANLIB="ranlib"
+          export RUSTFLAGS='-C link-arg=-Wl,-rpath,./ -C target-feature=-crt-static'
+          if  test "$GOARCH" = "armv7l" ;then
+            apt update && apt install -y software-properties-common
+            add-apt-repository universe && add-apt-repository multiverse
+            apt update && apt-get install -y libc6-dev-armhf-cross
+            export AWS_LC_SYS_INCLUDES=/usr/arm-linux-gnueabihf/include
+            sed -i '/\[dependencies\]/a aws-lc-sys = { version = "0.27.1", features = ["bindgen"] }' Cargo.toml
+            cargo build --release --target=armv7-unknown-linux-musleabihf
+            cp ./target/armv7-unknown-linux-musleabihf/release/libsmartdns_ui.a ./
+          else
+            cargo build --release --target=$GOARCH-unknown-linux-musl
+            cp ./target/$GOARCH-unknown-linux-musl/release/libsmartdns_ui.a ./
+          fi
+          EOF
+          if  test "$GOARCH" = "armv7l" ;then
+            docker run -i --rm -v ${{ github.workspace }}:/workdir messense/rust-musl-cross:armv7-musleabihf sh /workdir/cargo-build.sh
+          else
+            docker run -i --rm -v ${{ github.workspace }}:/workdir messense/rust-musl-cross:$GOARCH-musl sh /workdir/cargo-build.sh
+          fi
+          rm docker-build.sh || true
+          cat >> docker-build.sh << EOF
+          apk add make coreutils tar pkgconfig dpkg binutils
+          cd /workdir
+          sed -i 's/\(override LDFLAGS += -lssl -lcrypto\)/\1 -lsmartdns_ui/' ./src/Makefile
+          export CFLAGS="-I /workdir/openssl/include -I /workdir/plugin/smartdns-ui"
+          export LDFLAGS="-L /workdir/openssl -L /workdir/plugin/smartdns-ui"
+          if  test "$GOARCH" = "armv7l" ;then
+            export STRIP=/armv7l-linux-musleabihf/bin/strip
+          else
+            export STRIP=/$GOARCH-linux-musl/bin/strip
+          fi
+          ./package/build-pkg.sh --platform debian --arch all --filearch $GOARCH-debian-with_ui --static --outputdir /workdir/build
+          ./package/build-pkg.sh --platform linux --arch all --filearch $GOARCH-linux-with_ui --static --outputdir /workdir/build
+          ./package/build-pkg.sh --platform openwrt --arch all --filearch $GOARCH-openwrt-with_ui --static --outputdir /workdir/build
+          ./package/build-pkg.sh --platform optware --arch all --filearch $GOARCH-optware-with_ui --static --outputdir /workdir/build
+          cp ./src/smartdns /workdir/build/smartdns-$GOARCH-with_ui -a
+          export CFLAGS="-I /workdir/openssl/include -I /workdir/plugin/smartdns-ui -DFEATURE_CHECK_EDNS"
+          ./package/build-pkg.sh --platform debian --arch all --filearch $GOARCH-debian-edns-with_ui --static --outputdir /workdir/build
+          ./package/build-pkg.sh --platform linux --arch all --filearch $GOARCH-linux-edns-with_ui --static --outputdir /workdir/build
+          ./package/build-pkg.sh --platform openwrt --arch all --filearch $GOARCH-openwrt-edns-with_ui --static --outputdir /workdir/build
+          ./package/build-pkg.sh --platform optware --arch all --filearch $GOARCH-optware-edns-with_ui --static --outputdir /workdir/build
+          cp ./src/smartdns /workdir/build/smartdns-$GOARCH-edns-with_ui -a
+          EOF
+
+          sed -i 's|\($STRIP\)\s*-d\s*\($CODE_DIR/src/smartdns\)|\1 -s \2|' ./package/build-pkg.sh
+          if [ "$GOARCH" == "armv7l" ] ;then
+            sed -i 's|^export STRIP.*|export STRIP=/armv7l-linux-musleabihf/bin/strip|' ./package/build-pkg.sh
+            docker run -i --rm -v ${{ github.workspace }}:/workdir muslcc/x86_64:armv7l-linux-musleabihf sh /workdir/docker-build.sh
+          else
+            sed -i 's|^export STRIP.*|export STRIP=/$GOARCH-linux-musl/bin/strip|' ./package/build-pkg.sh
             docker run -i --rm -v ${{ github.workspace }}:/workdir muslcc/x86_64:$GOARCH-linux-musl sh /workdir/docker-build.sh
           fi
 
