Revert "upgrade openssl to 3.4.1"
This reverts commit 818204d9341c7494b8070e641e2a686a7baec58d.

--- a/.github/workflows/deploy-docker-ui.yml
+++ b/.github/workflows/deploy-docker-ui.yml
@@ -64,9 +64,9 @@ jobs:
           elif [ "$GOARCH" == "powerpc64le" ] ;then
             ./Configure no-tests linux-ppc64le
           elif [ "$GOARCH" == "armv7" ] ;then
-            ./Configure no-tests linux-armv4 enable-quic enable-ktls no-docs
+            ./Configure no-tests linux-armv4 enable-quic enable-ktls
           else
-           ./Configure no-tests linux-$GOARCH enable-quic enable-ktls no-docs
+           ./Configure no-tests linux-$GOARCH enable-quic enable-ktls
           fi
           make clean && make all
           cd /workdir
